--- a/index.html
+++ b/index.html
@@ -1,11 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blogs | Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="CSS/index.css">
+
 </head>
+
 <body>
-    
+    <div class="main">
+
+
+        <!-- Loader -->
+        <div id="loader-div">
+            <span class="loader">Loading</span>
+        </div>
+        <!-- navbar No#1 -->
+        <div class="container-flude">
+            <div class="nav m-0 row d-flex  align-items-center justify-content-center">
+                <div
+                    class="p-0 col-xxl-7 col-xl-8 col-lg-9 col-md-10 col-sm-10 d-flex align-items-center justify-content-between">
+                    <h1 class="m-0 ps-4">Personal Blogging app</h1>
+
+                    <!-- ----------------/dropdown/-------------------- -->
+                    <div class="btn-group drop">
+                        <button class="btn shadow-none" type="button"
+                            data-bs-toggle="dropdown">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#fff"
+                                class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
+                                <path
+                                    d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
+                            </svg>
+                        </button>
+                        <ul class="dropdown-menu">
+
+                            <li class="p-2"> <a  href="#">Login</a></li>
+                        </ul>
+                        <!-- ------------------------------------- -->
+                    </div>
+                    <div class="nav-item d-flex align-items-center justify-content-arround">
+                        <a class="p-2" style="visibility: visible;" href="#">M.Owais</a>
+                        <a class="p-2" href="#">Login</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- navbar No#2 -->
+
+        <div class="container-flude">
+            <div class="nav-2 m-0 row d-flex  align-items-center justify-content-center">
+                <div
+                    class="p-0 col-xxl-7 col-xl-8 col-lg-9 col-md-10 col-sm-10 d-flex align-items-center justify-content-between">
+                    <h1 class="m-0 ps-4">Good Morning readers!</h1>
+
+                </div>
+            </div>
+
+        </div>
+        <div class="container-flude">
+            <div class=" m-0 mt-2 row d-flex  align-items-center justify-content-center">
+                <div
+                    class="p-0 col-xxl-7 col-xl-8 col-lg-9 col-md-10 col-sm-10 d-flex align-items-center justify-content-between">
+                    <h1 class="m-0 ps-4">All Blogs</h1>
+
+                </div>
+            </div>
+
+        </div>
+        <!-- All blogs are added in this div -->
+        <div class="container-flude">
+            <div class=" m-0 row d-flex  align-items-center justify-content-center">
+                <div
+                    class="p-0 col-xxl-7 col-xl-8 col-lg-9 col-md-10 col-sm-10 d-flex flex-column align-items-center justify-content-between content-1">
+                    <!-- Add blog here -->
+                    <div class="card col-12 ps-2 mt-3">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                            <p class="card-text">The advancement of
+                                technology has brought about profound changes in various aspects of our lives. From
+                                communication to transportation, from healthcare to entertainment, every sphere has
+                                witnessed the influence of technological innovations. One of the most significant
+                                breakthroughs in recent times is the development of artificial intelligence.
+
+
+                                In conclusion, artificial intelligence has revolutionized the way we interact with
+                                technology and holds immense potential for shaping the future. Its applications span
+                                across various sectors, from healthcare to finance to communication. However, the
+                                ethical implications and potential societal challenges cannot be ignored. Striking a
+                                balance between technological advancement and ethical considerations will be crucial as
+                                we continue to integrate AI into our lives.</p>
+                            <a href="#" class="card-link">Another link</a>
+                        </div>
+                    </div>
+                    <div class="card col-12 ps-2 mt-3">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                            <p class="card-text">The advancement of
+                                technology has brought about profound changes in various aspects of our lives. From
+                                communication to transportation, from healthcare to entertainment, every sphere has
+                                witnessed the influence of technological innovations. One of the most significant
+                                breakthroughs in recent times is the development of artificial intelligence.
+
+
+                                In conclusion, artificial intelligence has revolutionized the way we interact with
+                                technology and holds immense potential for shaping the future. Its applications span
+                                across various sectors, from healthcare to finance to communication. However, the
+                                ethical implications and potential societal challenges cannot be ignored. Striking a
+                                balance between technological advancement and ethical considerations will be crucial as
+                                we continue to integrate AI into our lives.</p>
+                            <a href="#" class="card-link">Another link</a>
+                        </div>
+                    </div>
+                    <div class="card col-12 ps-2 mt-3">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                            <p class="card-text">The advancement of
+                                technology has brought about profound changes in various aspects of our lives. From
+                                communication to transportation, from healthcare to entertainment, every sphere has
+                                witnessed the influence of technological innovations. One of the most significant
+                                breakthroughs in recent times is the development of artificial intelligence.
+
+
+                                In conclusion, artificial intelligence has revolutionized the way we interact with
+                                technology and holds immense potential for shaping the future. Its applications span
+                                across various sectors, from healthcare to finance to communication. However, the
+                                ethical implications and potential societal challenges cannot be ignored. Striking a
+                                balance between technological advancement and ethical considerations will be crucial as
+                                we continue to integrate AI into our lives.</p>
+                            <a href="#" class="card-link">Another link</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+
+
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
+    <script src="javaScript/firebase.js"></script>
+
 </body>
+
 </html>
