--- a/pages/signup.html
+++ b/pages/signup.html
@@ -1,11 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blogs | Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="../CSS/index.css">
+
 </head>
+
 <body>
-    
+    <div class="main">
+
+
+        <!-- Loader -->
+        <div id="loader-div">
+            <span class="loader">Loading</span>
+        </div>
+        <!-- navbar No#1 -->
+        <div class="container-flude">
+            <div class="nav m-0 row d-flex  align-items-center justify-content-center">
+                <div
+                    class="m-w p-0 col-xxl-7 col-xl-8 col-lg-9 col-md-10 col-sm-10 d-flex align-items-center justify-content-between">
+                    <h1 class="m-0 ps-4">Personal Blogging app</h1>
+
+                    <!-- ----------------/dropdown/-------------------- -->
+                    <div class="btn-group drop">
+                        <button class="btn shadow-none" type="button" data-bs-toggle="dropdown">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#fff"
+                                class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
+                                <path
+                                    d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
+                            </svg>
+                        </button>
+                        <ul class="dropdown-menu p-0">
+
+                            <li class="p-0"> <a class="p-2" href="../index.html">Home</a></li>
+                            <li class="p-0"> <a class="p-2" href="login.html">Login</a></li>
+                        </ul>
+                        <!-- ------------------------------------- -->
+                    </div>
+                    <div class="nav-item d-flex align-items-center justify-content-arround">
+                        <a class="p-2" href="../index.html">Home</a>
+                        <a class="p-2" href="login.html">Login</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- navbar No#2 -->
+
+        <div class="container-flude">
+            <div class="nav-2 m-0 row d-flex  align-items-center justify-content-center">
+                <div
+                    class="m-w p-0 col-xxl-7 col-xl-8 col-lg-9 col-md-10 col-sm-10 d-flex align-items-center justify-content-between">
+                    <h1 class="m-0 ps-4">Register yourself</h1>
+
+                </div>
+            </div>
+
+        </div>
+
+        <!-- All blogs are added in this div -->
+        <div class="container-flude">
+            <div class="signup-div m-0 row d-flex  align-items-center justify-content-center">
+                <div
+                    class="signup-input-container  d-flex flex-column   align-items-center justify-content-evenly col-xxl-3 col-xl-3 col-lg-4 col-md-5 col-sm-6">
+                    <input type="text" class="inputt form-control" placeholder="First Name">
+                    <input type="text" class="inputt form-control" placeholder="Last Name">
+                    <input type="email" class="inputt form-control" placeholder="Email">
+                    <input type="password" class="inputt form-control" placeholder="Password">
+                    <input type="password" class="inputt form-control" placeholder="Conform Password">
+                    <button type="button" class="btn">Signup</button>
+                </div>
+            </div>
+
+        </div>
+
+
+
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
+    <script src="../javaScript/app.js"></script>
+
 </body>
+
 </html>
