--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogs | Home</title>
+    <title>Home | Blogs</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
     <link rel="stylesheet" href="CSS/index.css">
-
+    <link rel="icon" href="../Images/bootstrap-icon.jpeg">
 </head>
 
 <body>
@@ -122,7 +122,7 @@
                                 ethical implications and potential societal challenges cannot be ignored. Striking a
                                 balance between technological advancement and ethical considerations will be crucial as
                                 we continue to integrate AI into our lives.</p>
-                            <a href="#" class="card-link">See all blogs from this user</a>
+                            <a href="pages/user.html" class="card-link">See all blogs from this user</a>
                         </div>
                     </div>
                     <div class="card col-12 ps-2 mb-4">
@@ -162,9 +162,10 @@
                                 ethical implications and potential societal challenges cannot be ignored. Striking a
                                 balance between technological advancement and ethical considerations will be crucial as
                                 we continue to integrate AI into our lives.</p>
-                            <a href="#" class="card-link">See all blogs from this user</a>
+                            <a href="pages/user.html" class="card-link">See all blogs from this user</a>
                         </div>
                     </div>
+                   
                     
 
 
