--- a/pages/home.html
+++ b/pages/home.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogs | Home</title>
+    <title>Dashboard | Blogs</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../CSS/index.css">
+    <link rel="icon" href="../Images/bootstrap-icon.jpeg">
 
 </head>
 
@@ -40,14 +41,14 @@
                             </svg>
                         </button>
                         <ul class="dropdown-menu p-0">
-                            <li class="p-0"> <a class="p-2" href="">Inzamam Malik</a></li>
-                            <li class="p-0"> <a class="p-2" href="">Logout</a></li>
+                            <li class="p-0"> <a class="p-2" href="../index.html">Home</a></li>
+                            <li class="p-0"> <a class="p-2" href="profile.html">Inzamam Malik</a></li>
                         </ul>
                         <!-- ------------------------------------- -->
                     </div>
                     <div class="nav-item d-flex align-items-center justify-content-arround">
-                        <a class="p-2" href="">Inzamam Malik</a>
-                        <a class="p-2" href="">Logout</a>
+                        <a class="p-2" href="../index.html">Home</a>
+                        <a class="p-2" href="profile.html">Inzamam Malik</a>
                     </div>
                 </div>
             </div>
@@ -71,8 +72,8 @@
             <div class=" m-0 my-4  row d-flex  align-items-center justify-content-center">
                 <div
                     class="m-w blog-input p-0 col-xxl-7 col-xl-8 col-lg-9 col-md-10 col-sm-10 d-flex flex-column align-items-center justify-content-evenly">
-                    <input type="text" class="form-control" placeholder="Add title">
-                    <textarea draggable="false" class="form-control" aria-label="With textarea" placeholder="Whats in your mind!"></textarea>
+                    <input type="text" class="form-control" placeholder="Add title" minlength="5" maxlength="50">
+                    <textarea draggable="false" class="form-control" aria-label="With textarea" placeholder="Whats in your mind!" minlength="100" maxlength="3000" ></textarea>
                     <button type="button" class="btn">Publish Blog</button>
                 </div>
             </div>
@@ -122,8 +123,8 @@
                                 ethical implications and potential societal challenges cannot be ignored. Striking a
                                 balance between technological advancement and ethical considerations will be crucial as
                                 we continue to integrate AI into our lives.</p>
-                            <a href="#" class="card-link">Delete</a>
-                            <a href="#" class="card-link">Edit</a>
+                            <a href="" class="card-link">Delete</a>
+                            <a href="" class="card-link">Edit</a>
                         </div>
                     </div>
 
