--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                         <ul class="dropdown-menu p-0">
 
                             <li class="p-0"> <a class="p-2" href="index.html">Home</a></li>
-                            <li class="p-0"> <a class="p-2" href="pages/login.html">Login</a></li>
+                            <li class="p-0"> <a class="p-2 changeHref" href="pages/login.html">Login</a></li>
                         </ul>
                         <!-- ------------------------------------- -->
                     </div>
                     <div class="nav-item d-flex align-items-center justify-content-arround">
                         <a class="p-2" href="index.html">Home</a>
-                        <a class="p-2" href="pages/login.html">Login</a>
+                        <a class="p-2 changeHref" href="pages/login.html">Login</a>
                     </div>
                 </div>
             </div>
@@ -180,8 +180,10 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
-    <script src="javaScript/app.js"></script>
+        crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.7.27/sweetalert2.all.js"
+        integrity="sha512-AqI7WBZEjM+wOnNSxgOafzB2xKgQpxsNmTVzPINEu9CDiFgrisyJOrqCHarauciq+82uHWgGjfPBzidkuykxBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="module" src="javaScript/app.js"></script>
 
 </body>
 
