--- a/pages/login.html
+++ b/pages/login.html
@@ -69,12 +69,12 @@
         <!-- All blogs are added in this div -->
         <div class="container-flude">
             <div class="login-div m-0 row d-flex  align-items-center justify-content-center">
-                <form
+                <div
                     class="login-input-container  d-flex flex-column   align-items-center justify-content-evenly col-xxl-3 col-xl-3 col-lg-4 col-md-5 col-sm-6">
                     <input type="email" class="inputt form-control" placeholder="Email">
                     <input type="password" class="inputt form-control" placeholder="Password">
-                    <button type="submit" class="btn">Login</button>
-                </form>
+                    <button id="loginBtn" type="submit" class="btn">Login</button>
+                </div>
             </div>
 
         </div>
@@ -86,7 +86,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
-    <script src="../javaScript/app.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.7.27/sweetalert2.all.js"
+        integrity="sha512-AqI7WBZEjM+wOnNSxgOafzB2xKgQpxsNmTVzPINEu9CDiFgrisyJOrqCHarauciq+82uHWgGjfPBzidkuykxBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="module" src="../javaScript/app.js"></script>
 
 </body>
 
