--- a/pages/profile.html
+++ b/pages/profile.html
@@ -41,14 +41,14 @@
                             </svg>
                         </button>
                         <ul class="dropdown-menu p-0">
-                            <li class="p-0"> <a class="p-2" href="../index.html">Home</a></li>
                             <li class="p-0"> <a class="p-2" href="home.html">Dashboard</a></li>
+                            <li class="p-0"> <a class="p-2 logoutUser" href="#">Logout</a></li>
                         </ul>
                         <!-- ------------------------------------- -->
                     </div>
                     <div class="nav-item d-flex align-items-center justify-content-arround">
-                        <a class="p-2" href="../index.html">Home</a>
                         <a class="p-2" href="home.html">Dashboard</a>
+                        <a class="p-2 logoutUser" href="#">Logout</a>
                     </div>
                 </div>
             </div>
@@ -71,7 +71,7 @@
         <!-- All blogs are added in this div -->
         <div class="container-flude">
             <div class="profile-main-div m-0 row d-flex  align-items-center justify-content-center">
-                <form method="post"
+                <div method="post"
                     class="m-w p-5 col-xxl-7 col-xl-8 col-lg-9 col-md-10 col-sm-10 d-flex flex-column align-items-start justify-content-between content-1">
                     <div>
 
@@ -105,7 +105,7 @@
 
                     <button type="submit" class="btn">Update Profile</button>
 
-                </form>
+                </div>
             </div>
 
         </div>
@@ -116,8 +116,10 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
-    <script src="../javaScript/app.js"></script>
+        crossorigin="anonymous"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.7.27/sweetalert2.all.js"
+        integrity="sha512-AqI7WBZEjM+wOnNSxgOafzB2xKgQpxsNmTVzPINEu9CDiFgrisyJOrqCHarauciq+82uHWgGjfPBzidkuykxBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="module" src="../javaScript/app.js"></script>
 
 </body>
 
