--- a/pages/signup.html
+++ b/pages/signup.html
@@ -69,15 +69,16 @@
         <!-- All blogs are added in this div -->
         <div class="container-flude">
             <div class="signup-div m-0 row d-flex  align-items-center justify-content-center">
-                <form
+                <div id="signupForm"
                     class="signup-input-container  d-flex flex-column   align-items-center justify-content-evenly col-xxl-3 col-xl-3 col-lg-4 col-md-5 col-sm-6">
-                    <input type="text" class="inputt form-control" placeholder="First Name" minlength="3" maxlength="20">
+                    <input type="text" class="inputt form-control" placeholder="First Name" minlength="3"
+                        maxlength="20">
                     <input type="text" class="inputt form-control" placeholder="Last Name" minlength="1" maxlength="20">
                     <input type="email" class="inputt form-control" placeholder="Email">
                     <input type="password" class="inputt form-control" placeholder="Password">
                     <input type="password" class="inputt form-control" placeholder="Conform Password">
-                    <button type="submit" class="btn">Signup</button>
-                </form>
+                    <button id="signupBtn" class="btn">Signup</button>
+                </div>
             </div>
 
         </div>
@@ -89,7 +90,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
-    <script src="../javaScript/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.7.27/sweetalert2.all.js"
+        integrity="sha512-AqI7WBZEjM+wOnNSxgOafzB2xKgQpxsNmTVzPINEu9CDiFgrisyJOrqCHarauciq+82uHWgGjfPBzidkuykxBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="module" src="../javaScript/app.js"></script>
 
 </body>
 
