file upload on firestore storage functionality added

--- a/pages/home.html
+++ b/pages/home.html
@@ -72,9 +72,9 @@
             <div class=" m-0 my-4  row d-flex  align-items-center justify-content-center">
                 <div
                     class="m-w blog-input p-0 col-xxl-7 col-xl-8 col-lg-9 col-md-10 col-sm-10 d-flex flex-column align-items-center justify-content-evenly">
-                    <input type="text" class="form-control" placeholder="Add title" minlength="5" maxlength="50">
-                    <textarea draggable="false" class="form-control" aria-label="With textarea" placeholder="Whats in your mind!" minlength="100" maxlength="3000" ></textarea>
-                    <button type="button" class="btn">Publish Blog</button>
+                    <input id="titleInput" type="text" class="form-control" placeholder="Add title" minlength="5" maxlength="50">
+                    <textarea id="desInput" draggable="false" class="form-control" aria-label="With textarea" placeholder="Whats in your mind!" minlength="100" maxlength="3000" ></textarea>
+                    <button type="button" id="publishBlog" class="btn">Publish Blog</button>
                 </div>
             </div>
 
