update profile , updete password ,post blog , filter blog,upload image on storage

--- a/pages/home.html
+++ b/pages/home.html
@@ -42,13 +42,13 @@
                         </button>
                         <ul class="dropdown-menu p-0">
                             <li class="p-0"> <a class="p-2" href="../index.html">Home</a></li>
-                            <li class="p-0"> <a class="p-2" href="profile.html">Inzamam Malik</a></li>
+                            <li class="p-0"> <a class="p-2 dashboardUserName" href="profile.html"></a></li>
                         </ul>
                         <!-- ------------------------------------- -->
                     </div>
                     <div class="nav-item d-flex align-items-center justify-content-arround">
                         <a class="p-2" href="../index.html">Home</a>
-                        <a class="p-2" href="profile.html">Inzamam Malik</a>
+                        <a class="p-2 dashboardUserName" href="profile.html"></a>
                     </div>
                 </div>
             </div>
@@ -82,51 +82,11 @@
         <!-- All blogs are added in this div -->
         <div class="container-flude">
             <div class=" m-0 row d-flex  align-items-center justify-content-center">
-                <div
+                <div id="blogHere"
                     class="p-0 col-xxl-7 col-xl-8 col-lg-9 col-md-10 col-sm-10 d-flex flex-column align-items-center justify-content-between content-1">
                     <!-- Add blog here -->
 
-                    <div class="card col-12 ps-2 mb-4">
-                        <div class="card-body">
-                            <div class="d-flex ">
-                                <img id="blogImage" src="../Images/profile.jpg" alt="User Profile">
-                                <div class="ms-3 d-flex flex-column justify-content-center">
-                                    <h5 class="card-title fs-4 col-8 col-sm-10">Lorem Lorem ipsum dolor sit amet consectetur
-                                        adipisicing elit. Dolor.</h5>
-                                    <div class="d-flex align-items-center">
-
-                                        <h6 class="card-subtitle p-0 m-0 text-body-secondary">Inzamam Malik</h6> <span
-                                            id="dateInBlog"> - August 16th, 2023</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <p class="card-text mt-3">The advancement of
-                                technology has brought about profound changes in various aspects of our lives. From
-                                communication to transportation, from healthcare to entertainment, every sphere has
-                                witnessed the influence of technological innovations. One of the most significant
-                                breakthroughs in recent times is the development of artificial intelligence.
-
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias ipsam dicta aliquid
-                                sint culpa pariatur veniam porro, at, quod soluta eum! Delectus sed explicabo veritatis
-                                nisi earum alias. Delectus ipsum assumenda atque, nostrum commodi quidem sit, ab modi
-                                saepe debitis sunt similique minima! Quisquam facilis suscipit sequi quo, error odit!
-
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos exercitationem
-                                distinctio perferendis eveniet mollitia nulla, vel quod. Quis, mollitia quia animi
-                                voluptates voluptatem, vel saepe autem ratione officia repudiandae molestiae inventore
-                                deleniti repellendus? Eveniet animi rerum sed excepturi doloremque quod, aspernatur
-                                temporibus labore? Rerum, dolorum fugiat? Aut ducimus rerum itaque!
-
-                                In conclusion, artificial intelligence has revolutionized the way we interact with
-                                technology and holds immense potential for shaping the future. Its applications span
-                                across various sectors, from healthcare to finance to communication. However, the
-                                ethical implications and potential societal challenges cannot be ignored. Striking a
-                                balance between technological advancement and ethical considerations will be crucial as
-                                we continue to integrate AI into our lives.</p>
-                            <a href="" class="card-link">Delete</a>
-                            <a href="" class="card-link">Edit</a>
-                        </div>
-                    </div>
+                   
 
 
                 </div>
