--- a/pages/profile.html
+++ b/pages/profile.html
@@ -74,7 +74,7 @@
                 <div
                     class="m-w p-5 col-xxl-7 col-xl-8 col-lg-9 col-md-10 col-sm-10 d-flex flex-column align-items-start justify-content-between content-1">
                     <div class="innerDiv">
-                        <img id="profileImg" src="../Images/profile.jpg" alt="Profile picture">
+                        <img id="profileImg" src="../Images/profile.png" alt="Profile picture">
                         <input id="fileInput" type="file">
                         <label for="fileInput">
                             <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor"
@@ -87,9 +87,9 @@
                     </div>
                     <label class="p-0 p-0">
 
-                        <input type="text" class="inputt  form-control" minlength="3" maxlength="20"
-                            value="Inzamam Malik" disabled>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                        <input id="userNameUpdate" type="text" class="inputt  form-control" minlength="3" maxlength="20"
+                            value="" disabled>
+                        <svg id="changeUserName" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                             class="bi bi-pen" viewBox="0 0 16 16">
                             <path
                                 d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001z" />
@@ -98,13 +98,13 @@
                     </label>
                     <h2>Password</h2>
                     <input minlength="3" maxlength="20" type="password" class="inputt form-control"
-                        placeholder="Old Password">
+                        placeholder="Old Password" disabled>
                     <input minlength="3" maxlength="20" type="password" class="inputt form-control"
                         placeholder="New Password">
                     <input minlength="3" maxlength="20" type="password" class="inputt form-control"
                         placeholder="Conform Password">
 
-                    <button type="submit" class="btn">Update Profile</button>
+                    <button id="updateBtn" type="submit" class="btn">Update Profile</button>
 
                 </div>
             </div>
