edit functionality added

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -42,13 +42,13 @@
                         </button>
                         <ul class="dropdown-menu p-0">
                             <li class="p-0"> <a class="p-2" href="home.html">Dashboard</a></li>
-                            <li class="p-0"> <a class="p-2 logoutUser" href="#">Logout</a></li>
+                            <li class="p-0"> <a class="p-2 logoutUser" href="javascript:void(0);">Logout</a></li>
                         </ul>
                         <!-- ------------------------------------- -->
                     </div>
                     <div class="nav-item d-flex align-items-center justify-content-arround">
                         <a class="p-2" href="home.html">Dashboard</a>
-                        <a class="p-2 logoutUser" href="#">Logout</a>
+                        <a class="p-2 logoutUser" href="javascript:void(0);">Logout</a>
                     </div>
                 </div>
             </div>
